<resources>
    <string name="app_name">Lab2and3Android</string>
    <string name="seven_number">7</string>
    <string name="eight_number">8</string>
    <string name="nine_number">9</string>
    <string name="four_number">4</string>
    <string name="five_number">5</string>
    <string name="six_number">6</string>
    <string name="one_number">1</string>
    <string name="two_number">2</string>
    <string name="three_number">3</string>
    <string name="dot_number">.</string>
    <string name="nol_number">0</string>
    <string name="equal_number">=</string>
    <string name="del_operation">DEL</string>
    <string name="clr_operation">CLR</string>
    <string name="divide_operation">/</string>
    <string name="multiply_operation">*</string>
    <string name="minus_operation">-</string>
    <string name="plus_operation">+</string>
    <string name="sin_operation">sin</string>
    <string name="cos_operation">cos</string>
    <string name="tan_operation">tan</string>
    <string name="pi_operation">Pi</string>
    <string name="power_operation">^</string>
    <string name="root_operation">Root</string>
</resources>
