<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="by.bstu.fit.oleggutsev.lab2and3android.MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/linearLayout3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="0"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:textSize="50sp"
                android:focusedByDefault="true"
                android:background="@android:color/white"
                android:maxLength="12"
                android:textColorHint="@color/colorTextViewText"
                android:textColor="@color/colorBlack"
                android:gravity="right|center"
                android:id="@+id/InterfaceEditText"
                tools:text="223322222222"/>
        <TextView
                android:gravity="right|top"
                android:padding="10dp"
                android:textSize="35sp"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorError"
                android:id="@+id/SecondInterfaceTextView"
                tools:text="На 0 делить нельзя"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAddOperation"
            android:id="@+id/linearLayout2">

        <Button
                android:text="@string/sin_operation"
                style="@style/AddOperation_style"
                android:id="@+id/buttonSin"/>
        <Button
                android:text="@string/cos_operation"
                android:id="@+id/buttonCos"
                style="@style/AddOperation_style"/>
        <Button
                android:text="@string/tan_operation"
                style="@style/AddOperation_style"
                android:id="@+id/buttonTan"/>
        <Button
                android:text="@string/pi_operation"
                android:id="@+id/buttonPi"
                style="@style/AddOperation_style"/>
        <Button
                android:text="@string/power_operation"
                style="@style/AddOperation_style"
                android:id="@+id/buttonPower"/>
        <Button
                android:text="@string/root_operation"
                android:id="@+id/buttonRoot"
                style="@style/AddOperation_style"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">

        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorNumber"
                android:weightSum="4">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="4">
                <Button
                        android:text="@string/seven_number"
                        style="@style/NumberButton_style"
                        android:id="@+id/button7"
                        android:onClick="Number_Click"
                        android:layout_weight="6"/>

                <Button
                        android:text="@string/eight_number"
                        android:onClick="Number_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/button8"/>
                <Button
                        android:text="@string/nine_number"
                        android:onClick="Number_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/button9"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1">
                <Button
                        android:text="@string/four_number"
                        android:onClick="Number_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/button4"/>
                <Button
                        android:text="@string/five_number"
                        android:onClick="Number_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/button5"/>
                <Button
                        android:text="@string/six_number"
                        android:onClick="Number_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/button6"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1">
                <Button
                        android:text="@string/one_number"
                        android:onClick="Number_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/button1"/>
                <Button
                        android:text="@string/two_number"
                        android:onClick="Number_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/button2"/>
                <Button
                        android:text="@string/three_number"
                        android:onClick="Number_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/button3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1">
                <Button
                        android:text="@string/dot_number"
                        style="@style/NumberButton_style"
                        android:onClick="AddOperation_Click"
                        android:id="@+id/buttonDot"/>
                <Button
                        android:text="@string/nol_number"
                        android:onClick="Number_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/button0"/>
                <Button
                        android:text="@string/equal_number"
                        android:onClick="AddOperation_Click"
                        style="@style/NumberButton_style"
                        android:id="@+id/buttonEqual"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorOperation"
                android:id="@+id/linearLayout">

            <Button
                    android:text="@string/del_operation"
                    android:onClick="DeleteOrClear_Click"
                    style="@style/OperationButton_style"
                    android:id="@+id/buttonDel"/>
            <Button
                    android:text="@string/divide_operation"
                    android:onClick="AddOperation_Click"
                    style="@style/OperationButton_style"
                    android:id="@+id/buttonDivide"/>
            <Button
                    android:text="@string/multiply_operation"
                    android:onClick="AddOperation_Click"
                    style="@style/OperationButton_style"
                    android:id="@+id/buttonMultiply"/>
            <Button
                    android:text="@string/minus_operation"
                    android:onClick="AddOperation_Click"
                    style="@style/OperationButton_style"
                    android:id="@+id/buttonMinus"/>
            <Button
                    android:text="@string/plus_operation"
                    style="@style/OperationButton_style"
                    android:onClick="AddOperation_Click"
                    android:id="@+id/buttonPlus"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
